Use Java declarations instead of Google Collections
Where appropriate, replace:
* Maps.newHashMap() with new HashMap<>()
* Lists.newArrayList() with new ArrayList<>() or
  Collections.singletonList()
* Sets.newHashSet() with new HashSet<>()
* Sets.difference() with explicit .removeAll() constructs (usually
  avoiding some collection instantiation too)
* Lists.newLinkedList() with new LinkedList<>()
* Maps.newConcurrentMap() with new ConcurrentHashMap<>()

Also
* replace some Guava filters/transforms with Java 8 streams
* replace some Guava predicates with Java 8 predicates
* remove unnecessary generic type qualifiers in affected classes
* clean up some Optional uses (.orNull(), direct Optional returns where
  appropriate)
* remove some String() constructors

Change-Id: Ie9a9ba5127120f8f72f60e662cc1b75c11a406a0
Signed-off-by: Stephen Kitt <skitt@redhat.com>